Fix navbar brand font size on mobile

--- a/app/assets/stylesheets/components/_navbar.sass
+++ b/app/assets/stylesheets/components/_navbar.sass
@@ -93,6 +93,9 @@ body
         margin-top: $dbc-navbar-height/8
         margin-bottom: 0
 
+    .navbar-brand
+      font-size: 18px
+
   .navbar-collapse
     border: 0
     box-shadow: none
